--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.2",
-    "expo": "~40.0.0",
+    "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
     "expo-font": "^9.0.0",
     "expo-status-bar": "~1.0.3",
